# g4ip

./: README.md  g4ip.cabal  stack.yaml
app/: Main.hs
src/: Decide.hs  Inference.hs  Proposition.hs
test/: Spec.hs
