name:                g4ip
version:             0.1.0.0
synopsis:            G4ip-based automated propositional logic theorem prover library
description:         Please see README.md
homepage:            https://gitlab.com/gwasser/g4ip#readme
license:             GPL-3
license-file:        COPYING
author:              Garret Wassermann
maintainer:          garret@wassiverse.com
copyright:           2016 Garret Wassermann
category:            Logic
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Proposition,
                       Inference,
                       Decide
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite g4ip-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       g4ip
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/gwasser/g4ip
